change component dependencies configuration
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/frameworks/native/c_wrapper/BUILD.gn
+++ b/frameworks/native/c_wrapper/BUILD.gn
@@ -34,7 +34,7 @@ ohos_shared_library("hisysevent_c_wrapper") {
 
   external_deps = [
     "c_utils:utils",
-    "hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 
   output_extension = "so"
