--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -65,7 +65,46 @@ ohos_shared_library("libhisyseventmanager") {
 
   external_deps = [
     "c_utils:utils",
-    "hilog_native:libhilog",
+    "hilog:libhilog",
+    "ipc:ipc_single",
+    "samgr:samgr_proxy",
+  ]
+}
+
+ohos_static_library("hisyseventmanager_static_lib_for_tdd") {
+  sources = [
+    "hisysevent_base_manager.cpp",
+    "hisysevent_listener_c.cpp",
+    "hisysevent_manager.cpp",
+    "hisysevent_manager_c.cpp",
+    "hisysevent_query_callback_c.cpp",
+    "hisysevent_record.cpp",
+    "hisysevent_record_c.cpp",
+    "hisysevent_record_convertor.cpp",
+  ]
+
+  output_name = "hisyseventmanager_static_lib_for_tdd"
+
+  part_name = "hisysevent_native"
+
+  subsystem_name = "hiviewdfx"
+
+  public_configs = [
+    "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_config",
+    ":hisyseventmanager_config",
+  ]
+
+  deps = [
+    "../../../../adapter/native/idl:sys_event_impl_client",
+    "../../../../adapter/native/idl:sys_event_service_gen_src_client",
+    "../../../../frameworks/native/util:hisysevent_util",
+    "../hisysevent:hisysevent_static_lib_for_tdd",
+    "//third_party/jsoncpp:jsoncpp",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "samgr:samgr_proxy",
   ]
