--- a/test/fuzztest/common/hisyseventmanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/common/hisyseventmanager_fuzzer/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -29,8 +29,7 @@ ohos_fuzztest("HiSysEventManagerFuzzTest") {
 
   sources = [ "hisyseventmanager_fuzzer.cpp" ]
 
-  external_deps = [
-    "hisysevent_native:libhisyseventmanager",
-    "hiviewdfx_hilog_native:libhilog",
-  ]
+  deps = [ "../../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd" ]
+
+  external_deps = [ "hilog:libhilog" ]
 }
