--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -43,6 +43,11 @@ ohos_shared_library("libhisysevent") {
 
   part_name = "hisysevent_native"
 
+  install_images = [
+    "system",
+    "updater",
+  ]
+
   subsystem_name = "hiviewdfx"
 
   innerapi_tags = [
