--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -56,7 +56,7 @@ ohos_executable("hisysevent") {
     "main.cpp",
   ]
 
-  part_name = "hisysevent_native"
+  part_name = "hisysevent"
   subsystem_name = "hiviewdfx"
 }
 
