--- a/interfaces/native/innerkits/hisysevent/encode/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/encode/BUILD.gn
@@ -39,6 +39,6 @@ ohos_source_set("hisysevent_encoded") {
     "hilog:libhilog",
   ]
 
-  part_name = "hisysevent_native"
+  part_name = "hisysevent"
   subsystem_name = "hiviewdfx"
 }
