add support for parsing floating number string with sicentific notation format
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/test/fuzztest/common/hisysevent_fuzzer/BUILD.gn
+++ b/test/fuzztest/common/hisysevent_fuzzer/BUILD.gn
@@ -29,7 +29,10 @@ ohos_fuzztest("HiSysEventFuzzTest") {
 
   sources = [ "hisysevent_fuzzer.cpp" ]
 
-  deps = [ "../../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd" ]
+  deps = [
+    "../../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
+    "../../../../interfaces/native/innerkits/hisysevent/encode:hisysevent_encoded",
+  ]
 
   external_deps = [ "hilog:libhilog" ]
 }
