inner api 纳入sasdk管控
Signed-off-by: liuyifei <liuyifei20@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -53,6 +53,7 @@ ohos_shared_library("libhisysevent") {
   innerapi_tags = [
     "chipsetsdk",
     "platformsdk",
+    "sasdk",
   ]
 
   version_script = "libhisysevent.map"
