--- a/interfaces/js/kits/BUILD.gn
+++ b/interfaces/js/kits/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//build/ohos.gni")
 
-group("hisysevent_napi") {
+group("hisysevent_napi_ref") {
   deps = []
   if (support_jsapi) {
     deps += [
