bug: change the module_out_path of fuzz testcase
Signed-off-by: lyj_love_code <liangyujian2@huawei.com>

--- a/test/fuzztest/common/hisyseventmanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/common/hisyseventmanager_fuzzer/BUILD.gn
@@ -14,7 +14,7 @@ import("//build/config/features.gni")
 import("//build/test.gni")
 
 ohos_fuzztest("HiSysEventManagerFuzzTest") {
-  module_out_path = "hisysevent_native/hisysevent_manager"
+  module_out_path = "hisysevent/hisysevent"
 
   include_dirs = [ "hisyseventmanager_fuzzer.h" ]
 
