--- a/test/fuzztest/common/hisysevent_fuzzer/BUILD.gn
+++ b/test/fuzztest/common/hisysevent_fuzzer/BUILD.gn
@@ -14,7 +14,7 @@ import("//build/config/features.gni")
 import("//build/test.gni")
 
 ohos_fuzztest("HiSysEventFuzzTest") {
-  module_out_path = "hisysevent_native/hisysevent"
+  module_out_path = "hisysevent/hisysevent"
 
   include_dirs = [ "hisysevent_fuzzer.h" ]
 
