--- a/test/fuzztest/common/hisysevent_fuzzer/BUILD.gn
+++ b/test/fuzztest/common/hisysevent_fuzzer/BUILD.gn
@@ -29,10 +29,7 @@ ohos_fuzztest("HiSysEventFuzzTest") {
 
   sources = [ "hisysevent_fuzzer.cpp" ]
 
-  deps = [
-    "../../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
-    "../../../../interfaces/native/innerkits/hisysevent/encode:hisysevent_encoded",
-  ]
+  deps = [ "../../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd" ]
 
   external_deps = [ "hilog:libhilog" ]
 }
