--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -50,12 +50,14 @@ ohos_moduletest("HiSysEventAdapterNativeTest") {
       "c_utils:utils",
       "hilog:libhilog",
       "ipc:ipc_single",
+      "samgr:samgr_proxy",
     ]
   } else {
     external_deps = [
       "c_utils:utils",
       "hilog:libhilog",
       "ipc:ipc_single",
+      "samgr:samgr_proxy",
     ]
     cflags_cc = [ "-D__HIVIEW_HAVE_HITRACE__" ]
   }
