独立编译整改
Signed-off-by: steven_yangbixin <yangbixin@h-partners.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -24,16 +24,14 @@ declare_args() {
 config("hisysevent_config") {
   visibility = [ "*:*" ]
 
-  include_dirs = [
-    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
-    "//third_party/bounds_checking_function/include",
-  ]
+  include_dirs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include" ]
 }
 
 ohos_shared_library("libhisysevent") {
   configs = [ ":hisysevent_config" ]
 
   all_dependent_configs = [ ":hisysevent_config" ]
+  public_configs = [ ":hisysevent_config" ]
 
   sources = [
     "encoded_param.cpp",
@@ -68,21 +66,23 @@ ohos_shared_library("libhisysevent") {
 
   version_script = "libhisysevent.map"
 
-  external_deps = [ "hilog:libhilog" ]
+  external_deps = [
+    "bounds_checking_function:libsec_shared",
+    "hilog:libhilog",
+  ]
 
   defines = []
   if (hiviewdfx_hitrace_enabaled) {
     external_deps += [ "hitrace:libhitracechain" ]
     defines += [ "HIVIEWDFX_HITRACE_ENABLED" ]
   }
-
-  deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
 }
 
 ohos_static_library("hisysevent_static_lib_for_tdd") {
   configs = [ ":hisysevent_config" ]
 
   all_dependent_configs = [ ":hisysevent_config" ]
+  public_configs = [ ":hisysevent_config" ]
 
   sources = [
     "encoded_param.cpp",
@@ -102,13 +102,14 @@ ohos_static_library("hisysevent_static_lib_for_tdd") {
 
   subsystem_name = "hiviewdfx"
 
-  external_deps = [ "hilog:libhilog" ]
+  external_deps = [
+    "bounds_checking_function:libsec_shared",
+    "hilog:libhilog",
+  ]
 
   defines = []
   if (hiviewdfx_hitrace_enabaled) {
     external_deps += [ "hitrace:libhitracechain" ]
     defines += [ "HIVIEWDFX_HITRACE_ENABLED" ]
   }
-
-  deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
 }
