--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -25,10 +25,7 @@ config("sys_event_impl_config") {
 }
 
 ohos_source_set("sys_event_impl_client") {
-  include_dirs = [
-    "include",
-    "//third_party/bounds_checking_function/include",
-  ]
+  include_dirs = [ "include" ]
 
   sources = [
     "src/file_util.cpp",
@@ -42,13 +39,17 @@ ohos_source_set("sys_event_impl_client") {
   all_dependent_configs = [ ":sys_event_impl_config" ]
 
   public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
+  public_configs += [ ":sys_event_impl_config" ]
 
   defines = []
 
   external_deps = [
+    "bounds_checking_function:libsec_shared",
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_single",
+    "jsoncpp:jsoncpp",
+    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 
@@ -63,11 +64,7 @@ ohos_source_set("sys_event_impl_client") {
 }
 
 ohos_source_set("sys_event_service_gen_src_client") {
-  include_dirs = [
-    "include",
-    "//third_party/bounds_checking_function/include",
-    "//utils/system/safwk/native/include",
-  ]
+  include_dirs = [ "include" ]
 
   sources = [
     "src/ash_mem_utils.cpp",
@@ -80,8 +77,10 @@ ohos_source_set("sys_event_service_gen_src_client") {
   ]
 
   all_dependent_configs = [ ":sys_event_impl_config" ]
+  public_configs = [ ":sys_event_impl_config" ]
 
   external_deps = [
+    "bounds_checking_function:libsec_shared",
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_single",
