--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -24,9 +24,6 @@ ohos_executable("hisysevent") {
   include_dirs = [
     ".",
     "include",
-    "//utils/system/safwk/native/include",
-    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
-    "//third_party/jsoncpp/include",
   ]
 
   public_configs =
@@ -37,13 +34,14 @@ ohos_executable("hisysevent") {
     "../../interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_client",
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_service_gen_src_client",
-    "//third_party/jsoncpp:jsoncpp",
   ]
 
   external_deps = [
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_single",
+    "jsoncpp:jsoncpp",
+    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 
