--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -19,7 +19,6 @@ config("sys_event_impl_config") {
   include_dirs = [
     ".",
     "include",
-    "//foundation/systemabilitymgr/safwk/services/safwk/include",
     "//third_party/jsoncpp/include",
   ]
 }
@@ -36,10 +35,10 @@ ohos_source_set("sys_event_impl_client") {
 
   deps = [ "//third_party/jsoncpp:jsoncpp" ]
 
-  all_dependent_configs = [ ":sys_event_impl_config" ]
-
-  public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
-  public_configs += [ ":sys_event_impl_config" ]
+  public_configs = [
+    "../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config",
+    ":sys_event_impl_config",
+  ]
 
   defines = []
 
@@ -76,7 +75,6 @@ ohos_source_set("sys_event_service_gen_src_client") {
     "src/sys_event_service_proxy.cpp",
   ]
 
-  all_dependent_configs = [ ":sys_event_impl_config" ]
   public_configs = [ ":sys_event_impl_config" ]
 
   external_deps = [
