--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -27,7 +27,6 @@ config("unittest_config") {
   include_dirs = [
     "//base/hiviewdfx/hisysevent/frameworks/native/c_wrapper/include",
     "//base/hiviewdfx/hisysevent/frameworks/native/include",
-    "//third_party/jsoncpp/include",
   ]
 
   cflags_cc = [ "-D__UNITTEST__" ]
@@ -53,13 +52,13 @@ ohos_unittest("HiSysEventToolUnitTest") {
     "../../../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
     "../../../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd",
     "//third_party/googletest:gtest_main",
-    "//third_party/jsoncpp:jsoncpp",
   ]
 
   external_deps = [
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_single",
+    "jsoncpp:jsoncpp",
     "samgr:samgr_proxy",
   ]
 }
@@ -78,13 +77,13 @@ ohos_unittest("HiSysEventCWrapperTest") {
     "../../../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd",
     "../../../c_wrapper:hisysevent_c_wrapper",
     "//third_party/googletest:gtest_main",
-    "//third_party/jsoncpp:jsoncpp",
   ]
 
   external_deps = [
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_single",
+    "jsoncpp:jsoncpp",
     "samgr:samgr_proxy",
   ]
 }
