rust接口增加编译校验
Signed-off-by: caoxiaogang <cxg344685003@163.com>

--- a/interfaces/rust/BUILD.gn
+++ b/interfaces/rust/BUILD.gn
@@ -24,6 +24,7 @@ ohos_rust_shared_library("hisysevent_rust") {
 
   crate_name = "hisysevent"
   crate_type = "dylib"
+  rustflags = [ "-Zstack-protector=all" ]
 
   part_name = "hisysevent"
   subsystem_name = "hiviewdfx"
