optimize the logic of hisysevent testcases
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/test/fuzztest/common/hisyseventmanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/common/hisyseventmanager_fuzzer/BUILD.gn
@@ -14,7 +14,7 @@ import("//build/config/features.gni")
 import("//build/test.gni")
 
 ohos_fuzztest("HiSysEventManagerFuzzTest") {
-  module_out_path = "hisysevent/hisysevent"
+  module_out_path = "hisysevent/hisysevent_fuzz"
 
   include_dirs = [ "hisyseventmanager_fuzzer.h" ]
 
