--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -60,7 +60,10 @@ ohos_source_set("sys_event_impl_client") {
 }
 
 ohos_source_set("sys_event_service_gen_src_client") {
-  include_dirs = [ "include" ]
+  include_dirs = [
+    "../../../interfaces/native/innerkits/hisysevent_manager/include",
+    "include",
+  ]
 
   sources = [
     "src/ash_mem_utils.cpp",
