--- a/interfaces/js/kits/napi/BUILD.gn
+++ b/interfaces/js/kits/napi/BUILD.gn
@@ -38,6 +38,7 @@ ohos_shared_library("hisysevent_napi") {
 
   external_deps = [
     "access_token:libtokenid_sdk",
+    "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_single",
     "jsoncpp:jsoncpp",
