--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -42,7 +42,6 @@ ohos_moduletest("HiSysEventAdapterNativeTest") {
     "../../../frameworks/native/util:hisysevent_util",
     "../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
     "../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd",
-    "//third_party/googletest:gtest_main",
   ]
 
   if (is_standard_system) {
@@ -75,7 +74,6 @@ ohos_moduletest("HiSysEventNativeTest") {
     "../../../adapter/native/idl:sys_event_service_gen_src_client",
     "../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
     "../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd",
-    "//third_party/googletest:gtest_main",
   ]
 
   if (is_standard_system) {
@@ -99,16 +97,16 @@ ohos_moduletest("HiSysEventCTest") {
 
   configs = [ ":hisysevent_native_test_config" ]
 
-  if (build_public_version) {
-    deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
-  } else {
-    deps = [ "//third_party/bounds_checking_function:libsec_static" ]
-  }
-
   external_deps = [
     "hilog:libhilog",
     "hisysevent:libhisysevent",
   ]
+
+  if (build_public_version) {
+    external_deps += [ "bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps += [ "bounds_checking_function:libsec_static" ]
+  }
 }
 
 ohos_moduletest("HiSysEventManagerCTest") {
@@ -124,16 +122,15 @@ ohos_moduletest("HiSysEventManagerCTest") {
   deps = [
     "../../../frameworks/native/util:hisysevent_util",
     "../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd",
-    "//third_party/googletest:gtest_main",
   ]
 
-  if (build_public_version) {
-    deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
-  } else {
-    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
-  }
-
   external_deps = [ "hilog:libhilog" ]
+
+  if (build_public_version) {
+    external_deps += [ "bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps += [ "bounds_checking_function:libsec_static" ]
+  }
 }
 
 ohos_moduletest("HiSysEventDelayTest") {
@@ -149,16 +146,15 @@ ohos_moduletest("HiSysEventDelayTest") {
   deps = [
     "../../../frameworks/native/util:hisysevent_util",
     "../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
-    "//third_party/googletest:gtest_main",
   ]
 
-  if (build_public_version) {
-    deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
-  } else {
-    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
-  }
-
   external_deps = [ "hilog:libhilog" ]
+
+  if (build_public_version) {
+    external_deps += [ "bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps += [ "bounds_checking_function:libsec_static" ]
+  }
 }
 
 ohos_moduletest("HiSysEventWroteResultCheckTest") {
@@ -175,14 +171,7 @@ ohos_moduletest("HiSysEventWroteResultCheckTest") {
     "../../../frameworks/native/util:hisysevent_util",
     "../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
     "../../../interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_static_lib_for_tdd",
-    "//third_party/googletest:gtest_main",
   ]
-
-  if (build_public_version) {
-    deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
-  } else {
-    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
-  }
 
   external_deps = [ "hilog:libhilog" ]
 
@@ -190,6 +179,12 @@ ohos_moduletest("HiSysEventWroteResultCheckTest") {
   if (hiviewdfx_hitrace_enabaled_for_test) {
     external_deps += [ "hitrace:libhitracechain" ]
     defines += [ "HIVIEWDFX_HITRACE_ENABLED_FOR_TEST" ]
+  }
+
+  if (build_public_version) {
+    external_deps += [ "bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps += [ "bounds_checking_function:libsec_static" ]
   }
 }
 
@@ -206,16 +201,15 @@ ohos_moduletest("HiSysEventEncodedTest") {
   deps = [
     "../../../frameworks/native/util:hisysevent_util",
     "../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
-    "//third_party/googletest:gtest_main",
   ]
 
-  if (build_public_version) {
-    deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
-  } else {
-    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
-  }
-
   external_deps = [ "hilog:libhilog" ]
+
+  if (build_public_version) {
+    external_deps += [ "bounds_checking_function:libsec_shared" ]
+  } else {
+    external_deps += [ "bounds_checking_function:libsec_static" ]
+  }
 }
 
 group("moduletest") {
