cherry pick b2c8010 from https://gitee.com/honghecun/hiviewdfx_hisysevent/pulls/526 rust接口相关代码回退
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/rust/innerkits/BUILD.gn
+++ b/interfaces/rust/innerkits/BUILD.gn
@@ -14,12 +14,18 @@
 import("//build/ohos.gni")
 
 ohos_rust_shared_library("hisysevent_rust") {
-  sources = [ "src/lib.rs" ]
+  sources = [
+    "src/lib.rs",
+    "src/macros.rs",
+    "src/sys_event.rs",
+    "src/sys_event_manager.rs",
+    "src/utils.rs",
+  ]
 
   deps = [
-    "../../frameworks/native/c_wrapper:hisysevent_c_wrapper",
-    "../native/innerkits/hisysevent:libhisysevent",
-    "../native/innerkits/hisysevent_manager:libhisyseventmanager",
+    "../../../frameworks/native/c_wrapper:hisysevent_c_wrapper",
+    "../../native/innerkits/hisysevent:libhisysevent",
+    "../../native/innerkits/hisysevent_manager:libhisyseventmanager",
   ]
 
   crate_name = "hisysevent"
