add hisysevent easy write interfaces
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent_easy/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_easy/BUILD.gn
@@ -20,6 +20,7 @@ config("hisysevent_easy_config") {
 }
 
 ohos_static_library("libhisysevent_easy") {
+  branch_protector_ret = "pac_ret"
   sanitize = {
     cfi = true
     cfi_cross_dso = true
