cherry pick eb834c2 from https://gitee.com/honghecun/hiviewdfx_hisysevent/pulls/545 adapt pac build parameter
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -28,6 +28,8 @@ config("hisysevent_config") {
 }
 
 ohos_shared_library("libhisysevent") {
+  branch_protector_ret = "pac_ret"
+
   configs = [ ":hisysevent_config" ]
 
   all_dependent_configs = [ ":hisysevent_config" ]
