--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -61,7 +61,10 @@ ohos_source_set("sys_event_impl_client") {
                               "${target_gen_dir}/sys_event_service_proxy.cpp",
                             ])
 
-  deps = [ ":sys_event_interface" ]
+  deps = [
+    ":sys_event_interface",
+    "../../../interfaces/native/innerkits/hisysevent:libhisysevent",
+  ]
 
   public_configs = [ ":sys_event_impl_config" ]
 
