format directory structure
Signed-off-by: liujia178 <liujia178@huawei.com>
Change-Id: Ic2018235e1db743941b0191221d3442415c50d4d

--- a/interfaces/ets/ani/BUILD.gn
+++ b/interfaces/ets/ani/BUILD.gn
@@ -11,15 +11,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//build/config/components/ets_frontend/ets2abc_config.gni")
 import("//build/ohos.gni")
 
 group("ani_hisysevent_package") {
   deps = []
   if (support_jsapi) {
     deps += [
-      "ets:ani_hisysevent",
-      "ets:hisysevent_abc_etc",
+      "hisysevent:hisysevent_ani",
+      "hisysevent:hisysevent_etc",
     ]
   }
 }
