feature: add hisysevent ani
Signed-off-by: liujia178 <liujia178@huawei.com>
Change-Id: I067d9d5d4806018e4ea8772b82ea26bcd6a1b650

--- a/interfaces/ets/ani/hisysevent/BUILD.gn
+++ b/interfaces/ets/ani/hisysevent/BUILD.gn
@@ -17,6 +17,9 @@ import("//build/ohos.gni")
 ohos_shared_library("hisysevent_ani") {
   include_dirs = [ "./include/" ]
   sources = [
+    "./src/ani_callback_manager.cpp",
+    "./src/ani_hisysevent_listener.cpp",
+    "./src/ani_hisysevent_querier.cpp",
     "./src/hisysevent_ani.cpp",
     "./src/hisysevent_ani_util.cpp",
   ]
