--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -146,7 +146,10 @@ ohos_moduletest("HiSysEventDelayTest") {
     "../../../interfaces/native/innerkits/hisysevent:hisysevent_static_lib_for_tdd",
   ]
 
-  external_deps = [ "hilog:libhilog" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 
   if (build_public_version) {
     external_deps += [ "bounds_checking_function:libsec_shared" ]
