Update hardcoded names affected by name mangling
Issue:
https://gitee.com/openharmony/hiviewdfx_hisysevent/issues/ICQ7GL

Description:
Swap hard-coded names to API calls when interacting with ANI.

Signed-off-by: Otto Eotvos <otto.eotvos@h-lab.eu>
Change-Id: Ie0b4b2fb802c506385ab0b4892e2047e456c806f

--- a/interfaces/ets/ani/hisysevent/BUILD.gn
+++ b/interfaces/ets/ani/hisysevent/BUILD.gn
@@ -37,6 +37,7 @@ ohos_shared_library("hisysevent_ani") {
     "ipc:ipc_single",
     "jsoncpp:jsoncpp",
     "runtime_core:ani",
+    "runtime_core:ani_helpers",
   ]
 
   subsystem_name = "hiviewdfx"
