--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -36,6 +36,7 @@ ohos_shared_library("libhisysevent") {
 
   sources = [
     "encoded_param.cpp",
+    "event_socket_factory.cpp",
     "hisysevent.cpp",
     "hisysevent_c.cpp",
     "raw_data.cpp",
@@ -86,6 +87,7 @@ ohos_static_library("hisysevent_static_lib_for_tdd") {
 
   sources = [
     "encoded_param.cpp",
+    "event_socket_factory.cpp",
     "hisysevent.cpp",
     "hisysevent_c.cpp",
     "raw_data.cpp",
