change api tah from chipsetsdk to chipsetsdk_sp
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -61,7 +61,7 @@ ohos_shared_library("libhisysevent") {
   subsystem_name = "hiviewdfx"
 
   innerapi_tags = [
-    "chipsetsdk",
+    "chipsetsdk_sp",
     "platformsdk",
     "sasdk",
   ]
