--- a/interfaces/ets/ani/hisysevent/BUILD.gn
+++ b/interfaces/ets/ani/hisysevent/BUILD.gn
@@ -15,6 +15,7 @@ import("//build/config/components/ets_frontend/ets2abc_config.gni")
 import("//build/ohos.gni")
 
 ohos_shared_library("hisysevent_ani") {
+  shlib_type = "ani"
   include_dirs = [ "./include/" ]
   sources = [
     "./src/ani_callback_manager.cpp",
