optimize the logic of getting process id
Signed-off-by: honghecun <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent_easy/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_easy/BUILD.gn
@@ -40,6 +40,8 @@ ohos_static_library("libhisysevent_easy") {
     "hisysevent_easy.c",
   ]
 
+  external_deps = [ "bounds_checking_function:libsec_shared" ]
+
   part_name = "hisysevent"
 
   subsystem_name = "hiviewdfx"
