--- a/interfaces/native/innerkits/hisysevent_easy/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_easy/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Huawei Device Co., Ltd.
+# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -40,7 +40,7 @@ ohos_static_library("libhisysevent_easy") {
     "hisysevent_easy.c",
   ]
 
-  external_deps = [ "bounds_checking_function:libsec_shared" ]
+  external_deps = [ "bounds_checking_function:libsec_static" ]
 
   part_name = "hisysevent"
 
